<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/preto"
    android:orientation="vertical"
    tools:context=".view.SelecaoJogo">


    <LinearLayout
        android:id="@+id/layoutTexto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/vermelho"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textSelecao"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="18dp"
            android:background="@color/vermelho"
            android:fontFamily="@font/bree_serif"
            android:padding="10dp"
            android:text="@string/o_que_voc_quer_jogar_hoje"
            android:textAlignment="center"
            android:textColor="@color/branco"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="30dp" />


    </LinearLayout>

    <TextView
        android:id="@+id/textQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/bree_serif"
        android:text="@string/quiz"
        android:textAlignment="center"
        android:textColor="@color/branco"
        android:textSize="22sp"
        tools:layout_editor_absoluteX="181dp"
        tools:layout_editor_absoluteY="123dp" />

    <TextView
        android:id="@+id/textSingle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/bree_serif"
        android:text="@string/single_player"
        android:textAlignment="center"
        android:textColor="@color/branco"
        android:textSize="10sp"
        tools:layout_editor_absoluteX="171dp"
        tools:layout_editor_absoluteY="158dp" />

    <ImageView
        android:id="@+id/imagemQuiz"
        android:layout_width="404dp"
        android:layout_height="201dp"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:layout_marginTop="18dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/quizimagem" />

    <TextView
        android:id="@+id/textTrunfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/bree_serif"
        android:text="@string/trunfo"
        android:textColor="@color/branco"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textMulti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/bree_serif"
        android:text="@string/multiplayer"
        android:textAlignment="center"
        android:textColor="@color/branco"
        android:textSize="10sp"
        tools:layout_editor_absoluteX="171dp"
        tools:layout_editor_absoluteY="158dp" />

    <ImageView
        android:id="@+id/imagemTrunfo"
        android:layout_width="404dp"
        android:layout_height="201dp"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:layout_marginTop="18dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/trunfoimagem" />

</LinearLayout>