<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".view.MainActivity">

    <ImageView
        android:id="@+id/logoTrunflix"
        android:layout_width="273dp"
        android:layout_height="161dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/faceIcone"
        android:layout_width="28dp"
        android:layout_height="27dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintEnd_toStartOf="@+id/botaoFacebook"
        app:layout_constraintTop_toBottomOf="@+id/logoTrunflix"
        app:srcCompat="@drawable/facee" />

    <Button
        android:id="@+id/botaoFacebook"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="90dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/entrar_pelo_facebook"
        android:textColor="@color/branco"
        app:layout_constraintBottom_toTopOf="@+id/textOu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoTrunflix" />

    <TextView
        android:id="@+id/textOu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="200dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="200dp"
        android:hint="ou"
        android:textColor="@color/branco"
        android:textColorHint="@color/branco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botaoFacebook" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/manterLogado"
        android:layout_width="141dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="216dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="55dp"
        android:background="@color/colorPrimary"
        android:text="@string/manter_logado"
        android:textColor="@color/branco"
        android:textOff="yep"
        android:textOn="nope"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputSenha" />

    <Button
        android:id="@+id/botaoLogin"
        android:layout_width="124dp"
        android:layout_height="32dp"
        android:layout_marginStart="170dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="171dp"
        android:background="@color/colorPrimary"
        android:text="@string/login"
        android:textColor="@color/branco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manterLogado" />

    <Button
        android:id="@+id/botaoCadastro"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="48dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/cadastre_se_aqui"
        android:textColor="@color/branco"
        app:layout_constraintTop_toBottomOf="@+id/botaoLogin"
        tools:layout_editor_absoluteX="-16dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputSenha"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="6dp"
        android:background="@color/cinza_input"
        android:textColorHint="@color/branco"
        app:layout_constraintBottom_toTopOf="@+id/manterLogado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/senha"
            android:textSize="16dp"
            android:inputType="textPassword"
            android:textColor="@color/branco"
            android:textColorHint="@color/branco" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputEmail"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="8dp"
        android:background="@color/cinza_input"
        android:textColorHint="@color/branco"
        app:layout_constraintBottom_toTopOf="@+id/inputSenha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textOu">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="16dp"
            android:textColor="@color/branco"
            android:textColorHint="@color/branco" />
    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>